@@ -17,16 +17,23 @@ import uk.gov.hmcts.ccd.sdk.ConfigBuilderImpl;
 import uk.gov.hmcts.ccd.sdk.api.CaseDetails;
 import uk.gov.hmcts.ccd.sdk.api.Event;
 import uk.gov.hmcts.ccd.sdk.api.callback.AboutToStartOrSubmitResponse;
+import uk.gov.hmcts.ccd.sdk.type.Document;
+import uk.gov.hmcts.ccd.sdk.type.ListValue;
+import uk.gov.hmcts.ccd.sdk.type.YesOrNo;
 import uk.gov.hmcts.sptribs.ciccase.model.CaseData;
+import uk.gov.hmcts.sptribs.ciccase.model.CicCase;
+import uk.gov.hmcts.sptribs.ciccase.model.ContactPreferenceType;
+import uk.gov.hmcts.sptribs.ciccase.model.DssCaseData;
 import uk.gov.hmcts.sptribs.ciccase.model.State;
 import uk.gov.hmcts.sptribs.ciccase.model.UserRole;
 import uk.gov.hmcts.sptribs.common.AddSystemUpdateRole;
 import uk.gov.hmcts.sptribs.common.config.AppsConfig;
 import uk.gov.hmcts.sptribs.constants.CommonConstants;
+import uk.gov.hmcts.sptribs.document.model.DocumentType;
+import uk.gov.hmcts.sptribs.document.model.EdgeCaseDocument;
 import uk.gov.hmcts.sptribs.util.AppsUtil;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -37,9 +44,13 @@ import static uk.gov.hmcts.sptribs.testutil.ConfigTestUtil.createCaseDataConfigB
 import static uk.gov.hmcts.sptribs.testutil.ConfigTestUtil.getEventsFrom;
 import static uk.gov.hmcts.sptribs.testutil.TestConstants.CASE_DATA_CIC_ID;
 import static uk.gov.hmcts.sptribs.testutil.TestConstants.CASE_DATA_FILE_CIC;
-import static uk.gov.hmcts.sptribs.testutil.TestConstants.LOCAL_DATE_TIME;
 import static uk.gov.hmcts.sptribs.testutil.TestConstants.TEST_CASE_ID;
+import static uk.gov.hmcts.sptribs.testutil.TestConstants.TEST_FIRST_NAME;
+import static uk.gov.hmcts.sptribs.testutil.TestConstants.TEST_SOLICITOR_EMAIL;
+import static uk.gov.hmcts.sptribs.testutil.TestConstants.TEST_SOLICITOR_NAME;
 import static uk.gov.hmcts.sptribs.testutil.TestConstants.TEST_UPDATE_CASE_EMAIL_ADDRESS;
+import static uk.gov.hmcts.sptribs.testutil.TestDataHelper.LOCAL_DATE_TIME;
+import static uk.gov.hmcts.sptribs.testutil.TestDataHelper.caseData;
 import static uk.gov.hmcts.sptribs.testutil.TestFileUtil.loadJson;
 
 @ExtendWith(SpringExtension.class)
@@ -51,6 +62,9 @@ class CicSubmitCaseEventTest {
 
     @InjectMocks
     private CicSubmitCaseEvent cicSubmitCaseEvent;
+
+    @Mock
+    private DssApplicationReceivedNotification dssApplicationReceivedNotification;
 
     @Mock
     private AddSystemUpdateRole addSystemUpdateRole;
@@ -77,19 +91,19 @@ class CicSubmitCaseEventTest {
     }
 
     @Test
-    void shouldAddConfigurationToConfigBuilder() throws Exception {
+    void shouldAddConfigurationToConfigBuilder() {
 
         when(addSystemUpdateRole.addIfConfiguredForEnvironment(anyList()))
             .thenReturn(List.of(CITIZEN_CIC));
 
-        when(appsConfig.getApps()).thenReturn(Arrays.asList(cicAppDetail));
+        when(appsConfig.getApps()).thenReturn(List.of(cicAppDetail));
 
         cicSubmitCaseEvent.configure(configBuilder);
 
         assertThat(getEventsFrom(configBuilder).values())
             .extracting(Event::getId)
             .contains(AppsUtil.getExactAppsDetailsByCaseType(appsConfig, CommonConstants.ST_CIC_CASE_TYPE).getEventIds()
-                          .getSubmitEvent());
+                .getSubmitEvent());
     }
 
     @Test
@@ -112,13 +126,13 @@ class CicSubmitCaseEventTest {
         caseDetails.setCreatedDate(LOCAL_DATE_TIME);
 
         caseDetails.getData().getDssCaseData().setSubjectEmailAddress(TEST_UPDATE_CASE_EMAIL_ADDRESS);
+        caseDetails.getData().getDssCaseData().setSubjectFullName(TEST_FIRST_NAME);
+        caseDetails.getData().getDssCaseData().setRepresentativeFullName(TEST_FIRST_NAME);
 
-        when(appsConfig.getApps()).thenReturn(Arrays.asList(cicAppDetail));
+
+        when(appsConfig.getApps()).thenReturn(List.of(cicAppDetail));
 
         cicSubmitCaseEvent.configure(configBuilder);
-
-        AboutToStartOrSubmitResponse<Object, Object> submitResponseBuilder
-            = AboutToStartOrSubmitResponse.builder().data(caseData).state(State.Submitted).build();
 
 
         AboutToStartOrSubmitResponse<CaseData, State> aboutToSubmitResponse = cicSubmitCaseEvent.aboutToSubmit(
@@ -126,9 +140,48 @@ class CicSubmitCaseEventTest {
             beforeCaseDetails
         );
 
-        Assertions.assertEquals(aboutToSubmitResponse.getData(), caseDetails.getData());
-        Assertions.assertEquals(aboutToSubmitResponse.getState(), caseDetails.getState());
-        Assertions.assertNotEquals(submitResponseBuilder.getData(), beforeCaseDetails.getData());
-        Assertions.assertEquals(submitResponseBuilder.getState(), caseDetails.getState());
+        Assertions.assertEquals(State.DSS_Submitted, aboutToSubmitResponse.getState());
+    }
+
+    @Test
+    void shouldUpdateCaseDetails() {
+        //Given
+        EdgeCaseDocument dssDoc = new EdgeCaseDocument();
+        dssDoc.setDocumentLink(Document.builder().build());
+        ListValue<EdgeCaseDocument> listValue = new ListValue<>();
+        listValue.setValue(dssDoc);
+        DssCaseData dssCaseData = DssCaseData.builder()
+            .caseTypeOfApplication(CASE_DATA_CIC_ID)
+            .otherInfoDocuments(List.of(listValue))
+            .supportingDocuments(List.of(listValue))
+            .tribunalFormDocuments(List.of(listValue))
+            .subjectFullName(TEST_FIRST_NAME)
+            .representation(YesOrNo.YES)
+            .representationQualified(YesOrNo.YES)
+            .representativeEmailAddress(TEST_SOLICITOR_EMAIL)
+            .representativeFullName(TEST_SOLICITOR_NAME)
+            .build();
+
+        CicCase cicCase = CicCase.builder().build();
+        CaseData caseData = caseData();
+        caseData.setCicCase(cicCase);
+        caseData.setDssCaseData(dssCaseData);
+        final CaseDetails<CaseData, State> updatedCaseDetails = new CaseDetails<>();
+        final CaseDetails<CaseData, State> beforeDetails = new CaseDetails<>();
+        updatedCaseDetails.setId(TEST_CASE_ID);
+        updatedCaseDetails.setCreatedDate(LOCAL_DATE_TIME);
+        updatedCaseDetails.setData(caseData);
+
+        //When
+        AboutToStartOrSubmitResponse<CaseData, State> response1 =
+            cicSubmitCaseEvent.aboutToSubmit(updatedCaseDetails, beforeDetails);
+
+        //Then
+        assertThat(response1).isNotNull();
+        assertThat(response1.getData().getDssCaseData().getOtherInfoDocuments()).isEmpty();
+        assertThat(response1.getData().getCicCase().getApplicantDocumentsUploaded()).hasSize(3);
+        assertThat(response1.getData().getCicCase().getRepresentativeContactDetailsPreference()).isEqualTo(ContactPreferenceType.EMAIL);
+        assertThat(response1.getData().getCicCase().getApplicantDocumentsUploaded().get(0).getValue().getDocumentCategory())
+            .isIn(DocumentType.DSS_OTHER, DocumentType.DSS_SUPPORTING, DocumentType.DSS_TRIBUNAL_FORM);
     }
 }
